[gd_scene load_steps=6 format=3 uid="uid://cmx6hoer0lnio"]

[ext_resource type="Script" path="res://Games/TunnelTanks/Scripts/tun_player_ui.gd" id="1_xqejf"]
[ext_resource type="Texture2D" uid="uid://bfqd2prlarrde" path="res://Games/TunnelTanks/Images/player_ui.png" id="2_s16m3"]

[sub_resource type="LabelSettings" id="LabelSettings_cvvri"]
font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfjem"]
bg_color = Color(1, 0.847059, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icubg"]
bg_color = Color(0.309804, 0.709804, 1, 1)

[node name="PlayerUI" type="CenterContainer"]
custom_minimum_size = Vector2(500, 100)
script = ExtResource("1_xqejf")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Panel" type="Panel" parent="HB"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ScoreText" type="Label" parent="HB/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_cvvri")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HB"]
layout_mode = 2
texture = ExtResource("2_s16m3")

[node name="EnergyBar" type="ProgressBar" parent="HB/TextureRect"]
custom_minimum_size = Vector2(287, 16)
layout_mode = 0
offset_left = 72.0
offset_top = 20.0
offset_right = 358.0
offset_bottom = 36.0
theme_override_styles/fill = SubResource("StyleBoxFlat_cfjem")
value = 100.0
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="HB/TextureRect"]
custom_minimum_size = Vector2(286, 16)
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 359.0
offset_bottom = 80.0
theme_override_styles/fill = SubResource("StyleBoxFlat_icubg")
value = 75.0
show_percentage = false
